# aptu-coder

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  OBSERVABILITY.md  README.md  deny.toml  renovate.json  server.json
.github/instructions/: pr-review.md
.github/scripts/: check-package-age.sh
.github/workflows/: build-and-attest.yml  ci.yml  codeql.yml  issue-triage.yml  pr-review.yml  publish-registry-manual.yml  publish-registry.yml  release-repair.yml  release.yml  reuse.yml  scorecard.yml  update-deps.yml
crates/aptu-coder/: Cargo.toml
crates/aptu-coder-core/: Cargo.toml  README.md
crates/aptu-coder-core/benches/: analysis.rs
crates/aptu-coder-core/src/: analyze.rs  analyze_focused.rs  cache.rs  cache_disk.rs  completion.rs  edit.rs  formatter.rs  formatter_defuse.rs  graph.rs  lang.rs  lib.rs  parser.rs  parser_elements.rs  schema_helpers.rs  types.rs
crates/aptu-coder-core/src/formatter/: emit.rs  mod.rs  pagination.rs  render.rs  summary.rs
crates/aptu-coder-core/src/languages/: cpp.rs  csharp.rs  css.rs  fortran.rs  go.rs  html.rs  java.rs  javascript.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  regex_fallback.rs  rust.rs  typescript.rs  yaml.rs
crates/aptu-coder-core/tests/: idempotency.rs  integration_tests.rs  output_size.rs  test_symbol_focus_summary.rs
crates/aptu-coder-remote/: Cargo.toml  README.md
crates/aptu-coder-remote/src/: lib.rs  tests.rs  types.rs
crates/aptu-coder/src/: filters.rs  heredoc_validation.rs  lib.rs  main.rs  metrics.rs  metrics_export.rs  otel.rs  shell.rs  shell_scan.rs  shell_write.rs  tests.rs  validation.rs
crates/aptu-coder/tests/: analyze_symbol_error_metrics_tests.rs  annotations.rs  edit_replace_errors.rs  edit_working_dir.rs  exec_command.rs  exec_timeout.rs  exec_volume.rs  integration_tests.rs  logging_layer_tests.rs  mcp_smoke.rs  otel_tests.rs  profiles.rs  symbol_cache_tests.rs  transport_closed_after_tracing_event.rs
crates/aptu-remote/: Cargo.toml
crates/aptu-remote/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT-2026-06.md  DESIGN-GUIDE.md  METRICS.md  OBSERVABILITY.md  ROADMAP.md
docs/audit/: 2026-06-code-quality.md  2026-06-performance-token-efficiency.md  2026-06-structural-refactor.md  2026-06-unsupported-extension-handling.md  2026-07-05-usage-observability-code-size.md  2026-07-05-v0.22.3.md
docs/benchmarks/v15/: mcp-remote-only.json  methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v16/: methodology.md  run-order.txt  scores-template.json
docs/benchmarks/v17/: methodology.md  run-order.txt  scores-template.json
docs/benchmarks/wave10/: experiment-design.json  mcp-aptu-coder-edit-profile.json
docs/benchmarks/wave11/: experiment-design.json  run-order.txt  (+1 more)
scripts/: bench-v15-run.sh  bench-v16-run.sh  bench-v17-run.sh  extract_tools.py  mcp-metrics.py  session-stats.py
scripts/tests/: __init__.py  conftest.py  test_mcp_metrics.py
(+254 files in other folders)
