[package]
name = "aptu-coder-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Multi-language AST analysis library using tree-sitter"
readme = "README.md"
keywords = ["tree-sitter", "code-analysis", "ast", "parser", "static-analysis"]
categories = ["development-tools", "parser-implementations"]
publish = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["schemars"]
schemars = ["dep:schemars"]

[dependencies]
tree-sitter = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
lru = { workspace = true }
blake3 = { workspace = true }
snap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-fortran = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-yaml = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
tokio-util = { workspace = true }

[[bench]]
name = "analysis"
harness = false
path = "benches/analysis.rs"
