[package]
name = "aptu-remote"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gitlab = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
